--- a/myweb.html
+++ b/myweb.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page title</title>
+<title>Hello world</title>
 </head>
 <body>
 <h1>This is Heading</h1>
+<h1>This is another Heading</h1>
 <p>This is a paragraph</p>
 </body>
 </html>
